--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/bootstrap.js --recursive test"
+    "test": "mocha test/bootstrap.js --recursive test --timeout 200000"
   },
   "author": "",
   "license": "ISC",
